Time: 0 ms (100.00%) | Memory: 43.3 MB (5.31%) - LeetSync