@@ -1,32 +1,20 @@
-import java.util.*;
-
-public class Solution {
+class Solution {
     public List<List<Integer>> subsets(int[] nums) {
-        List<List<Integer>> res = new ArrayList<>();
-        backtrack(0, nums, new ArrayList<>(), res);
-        return res;
+        List<List<Integer>> result = new ArrayList<>();
+
+        backtrack(nums, 0, new ArrayList<>(), result);
+
+        return result;
     }
 
-    private void backtrack(int start, int[] nums, List<Integer> path, List<List<Integer>> res) {
-        // save current subset (copy!)
-        res.add(new ArrayList<>(path));
+    private void backtrack(int[] nums, int startIndex, List<Integer> path, List<List<Integer>> result) {
+        result.add(new ArrayList<>(path));
 
-        // try choices from `start` onward
-        for (int i = start; i < nums.length; i++) {
-            // choose
+        for (var i = startIndex; i < nums.length; i++) {
             path.add(nums[i]);
 
-            // recurse (i+1 because each element can be used once)
-            backtrack(i + 1, nums, path, res);
-
-            // undo (backtrack)
-            path.remove(path.size() - 1);
+            backtrack(nums, i + 1, path, result);
+            path.removeLast();
         }
-    }
-
-    // optional: quick test
-    public static void main(String[] args) {
-        Solution s = new Solution();
-        System.out.println(s.subsets(new int[] { 1, 2, 3 }));
     }
 }
